src/tui/snapshots/control_acceso__tui__visual_tests__Empresas_80x24_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
 BRISAS CLI                                           Operador de prueba · ROOT 
 EMPRESAS                                                                 ··:·· 
 ────────────────────────────────────────────────────────────────────────────── 
   BUSCAR · 0 RESULTADOS                                                        
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
 NOMBRE                                               CONTRATISTAS   ESTADO     
                                                                                
                            Sin empresas registradas                            
                                                                                
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
 No hay un registro seleccionado.                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ↑↓ Mover  ENTER Editar  N Nueva  A Estado  / Buscar  ESC Volver                
 F2 Salida rápida  F7 Tema                                                      
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                           " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"EMPRESAS" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                                                 " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"  BUSCAR · 0 RESULTADOS                                                       " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"NOMBRE                                               CONTRATISTAS   ESTADO    " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                           Sin empresas registradas                           " fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"No hay un registro seleccionado.                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Mover  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ENTER" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Editar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"N" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Nueva  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"A" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Estado  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"/" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Buscar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema                                                      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
